# reciept

./: .gitignore  README.md  pyproject.toml  sample_receipt.json
config/: roi_config.json
data/: README.md
examples/: README.md  receipt1.json  receipt2.json
src/receipt_ocr/: __init__.py  alignment.py  cli.py  ocr.py  parsers.py  pipeline.py
tests/: test_ocr.py  test_parsers.py  test_pipeline.py
tools/: evaluate.py  fetch_sample_receipt.py
